--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 Flask==2.1.2
 plantuml==0.3.0
-PyYAML==6.0
+PyYAML==6.0.2
 ruamel.base==1.0.0
 PyDriller==2.6.0
 lxml==5.3.0
+six==1.17.0
+ruamel.yaml
