--- a/config/config.ini
+++ b/config/config.ini
@@ -1,6 +1,6 @@
 [Repository]
 ; url = https://github.com/georgwittberger/apache-spring-boot-microservice-example
-; url = https://github.com/callistaenterprise/blog-microservices
+url = https://github.com/callistaenterprise/blog-microservices
 ; url = https://github.com/blaugmail/clone-sample-spring-oauth2-microservices
 ; url = https://github.com/apssouza22/java-microservice
 ; url = https://github.com/ewolff/microservice
@@ -8,14 +8,16 @@
 ; url = https://github.com/anilallewar/microservices-basics-spring-boot
 ; url = https://github.com/mudigal-technologies/microservices-sample
 ; url = https://github.com/sqshq/piggymetrics
-; url = https://github.com/shabbirdwd53/springboot-microservice
+; url = https://github.com/rohitghatol/spring-boot-microservices
 ; url = https://github.com/koushikkothagal/spring-boot-microservices-workshop
 ; url = https://github.com/mdeket/spring-cloud-movie-recommendation
 ; url = https://github.com/yidongnan/spring-cloud-netflix-example
 ; url = https://github.com/fernandoabcampos/spring-netflix-oss-microservices
 ; pb with dockercompose file
-url = https://github.com/spring-petclinic/spring-petclinic-microservices
-; url = https://github.com/rohitghatol/spring-boot-microservices
+; très long : 
+; url = https://github.com/spring-petclinic/spring-petclinic-microservices
+; service name replace "" par "-" 
+; url = https://github.com/shabbirdwd53/springboot-microservice
 ; url = https://github.com/jferrater/tap-and-eat-microservices
 
 [Technology Profiles]
