--- a/config/config.ini
+++ b/config/config.ini
@@ -8,17 +8,18 @@
 ; url = https://github.com/anilallewar/microservices-basics-spring-boot
 ; url = https://github.com/mudigal-technologies/microservices-sample
 ; url = https://github.com/sqshq/piggymetrics
+; revoir
 ; url = https://github.com/rohitghatol/spring-boot-microservices
 ; url = https://github.com/koushikkothagal/spring-boot-microservices-workshop
 ; url = https://github.com/mdeket/spring-cloud-movie-recommendation
 ; url = https://github.com/yidongnan/spring-cloud-netflix-example
-; url = https://github.com/fernandoabcampos/spring-netflix-oss-microservices
+url = https://github.com/fernandoabcampos/spring-netflix-oss-microservices
 ; pb with dockercompose file
 ; très long : 
 ; url = https://github.com/spring-petclinic/spring-petclinic-microservices
 ; service name replace "" par "-" 
 ; url = https://github.com/shabbirdwd53/springboot-microservice
-url = https://github.com/jferrater/tap-and-eat-microservices
+; url = https://github.com/jferrater/tap-and-eat-microservices
 
 [Technology Profiles]
 communication_techs_list = [("RabbitMQ", "rmq"), ("Kafka", "kfk"), ("RestTemplate", "rst"), ("FeignClient", "fgn"), ("Implicit Connections", "imp"), ("Database Connections", "dbc"), ("HTML", "html"), ("Docker-Compose", "dcm")]
