simplify:  rmq_entry

--- a/config/config.ini
+++ b/config/config.ini
@@ -1,25 +1,37 @@
 [Repository]
 ; url = https://github.com/georgwittberger/apache-spring-boot-microservice-example
+; revoir : rabbitmq non relié ...
 ; url = https://github.com/callistaenterprise/blog-microservices
 ; url = https://github.com/blaugmail/clone-sample-spring-oauth2-microservices
 ; url = https://github.com/apssouza22/java-microservice
 ; url = https://github.com/ewolff/microservice
+; 88s
 ; url = https://github.com/ewolff/microservice-kafka
+; 7.5s
 ; url = https://github.com/anilallewar/microservices-basics-spring-boot
-url = https://github.com/mudigal-technologies/microservices-sample
+; 40.25s
+; url = https://github.com/mudigal-technologies/microservices-sample
+; 19.19s
 ; url = https://github.com/sqshq/piggymetrics
 ; revoir
+; 7.18s
 ; url = https://github.com/rohitghatol/spring-boot-microservices
+; 1.25s
 ; url = https://github.com/koushikkothagal/spring-boot-microservices-workshop
+; 2.9s
 ; url = https://github.com/mdeket/spring-cloud-movie-recommendation
+; 2.35s
 ; url = https://github.com/yidongnan/spring-cloud-netflix-example
+; 92s
 ; url = https://github.com/fernandoabcampos/spring-netflix-oss-microservices
 ; pb with dockercompose file
-; très long : 
+; très long -> 288.3s
 ; url = https://github.com/spring-petclinic/spring-petclinic-microservices
 ; service name replace "" par "-" 
+; 1.65s
 ; url = https://github.com/shabbirdwd53/springboot-microservice
-; url = https://github.com/jferrater/tap-and-eat-microservices
+; 1.64s
+url = https://github.com/jferrater/tap-and-eat-microservices
 
 [Technology Profiles]
 communication_techs_list = [("RabbitMQ", "rmq"), ("Kafka", "kfk"), ("RestTemplate", "rst"), ("FeignClient", "fgn"), ("Implicit Connections", "imp"), ("Database Connections", "dbc"), ("HTML", "html"), ("Docker-Compose", "dcm")]
