note: ajout de tâches pour améliorer l'analyse

--- a/config/config.ini
+++ b/config/config.ini
@@ -1,11 +1,17 @@
 [Repository]
+; 1.25
 ; url = https://github.com/georgwittberger/apache-spring-boot-microservice-example
 ; revoir : rabbitmq non relié ...
 ; 4.21
 ; url = https://github.com/callistaenterprise/blog-microservices
+; 1.59
 ; url = https://github.com/blaugmail/clone-sample-spring-oauth2-microservices
+; 2.69
 ; url = https://github.com/apssouza22/java-microservice
+; 1.95
 ; url = https://github.com/ewolff/microservice
+
+; pb avec port ...
 ; 88s
 ; url = https://github.com/ewolff/microservice-kafka
 ; 7.5s
@@ -22,7 +28,7 @@
 ; 2.9s
 ; url = https://github.com/mdeket/spring-cloud-movie-recommendation
 ; 2.35s
-url = https://github.com/yidongnan/spring-cloud-netflix-example
+; url = https://github.com/yidongnan/spring-cloud-netflix-example
 ; 92s
 ; url = https://github.com/fernandoabcampos/spring-netflix-oss-microservices
 ; pb with dockercompose file
@@ -30,7 +36,7 @@ url = https://github.com/yidongnan/spring-cloud-netflix-example
 ; url = https://github.com/spring-petclinic/spring-petclinic-microservices
 ; service name replace "" par "-" 
 ; 1.65s
-; url = https://github.com/shabbirdwd53/springboot-microservice
+url = https://github.com/shabbirdwd53/springboot-microservice
 ; 1.64s
 ; url = https://github.com/jferrater/tap-and-eat-microservices
 
