--- a/config/config.ini
+++ b/config/config.ini
@@ -36,9 +36,41 @@
 ; url = https://github.com/spring-petclinic/spring-petclinic-microservices
 ; service name replace "" par "-" 
 ; 1.65s
-url = https://github.com/shabbirdwd53/springboot-microservice
+; url = https://github.com/shabbirdwd53/springboot-microservice
 ; 1.64s
 ; url = https://github.com/jferrater/tap-and-eat-microservices
+
+; ##########################
+; Others : 
+; A microservices demo implemented with Spring Cloud Netflix and Vaadin.
+; url = https://github.com/alejandro-du/vaadin-microservices-demo.git
+
+; Microservice Architecture with Multiple Languages
+; url = https://github.com/rodrigorodrigues/microservices-design-patterns.git
+
+; url = https://github.com/saturnism/istio-by-example-java.git
+
+; OpenShift S2I Builder for Java
+; url = https://github.com/jorgemoralespou/s2i-java.git
+
+; Ecommerce Microservices Architecture : A complete ecommerce demo Implement based on Microservice Architecture Pattern using Spring Boot, Spring Cloud, Spring WebFlux, Postgresdb and Docker.
+; url = https://github.com/mostafacs/ecommerce-microservices-spring-reactive-webflux.git
+
+; Develop a well-architected and well-documented REST API, built on a tightly integrated collection of Java EE-based microservices.
+; archi disponible 
+; url = https://github.com/garystafford/virtual-vehicles-demo.git
+
+; QBit - The Microservice Lib for Java - JSON, REST, WebSocket, Speed!
+; url = https://github.com/advantageous/qbit.git
+
+;Deploy MicroProfile based Java microservices on Kubernetes.
+;   File "/Users/Joseph/Desktop/Etude/CYBERSECURITÉ/A4/Stage-IRISA/code2DFD/core/dfd_extraction.py", line 90, in DFD_extraction
+;     assert microservices != microservices1, "Egalité - 1"
+;            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+; AssertionError: Egalité - 1
+url = https://github.com/IBM/Java-MicroProfile-on-Kubernetes.git
+
+
 
 [Technology Profiles]
 communication_techs_list = [("RabbitMQ", "rmq"), ("Kafka", "kfk"), ("RestTemplate", "rst"), ("FeignClient", "fgn"), ("Implicit Connections", "imp"), ("Database Connections", "dbc"), ("HTML", "html"), ("Docker-Compose", "dcm")]
