done : R16-R17 (pb : config server vs registry server ?)

--- a/config/config.ini
+++ b/config/config.ini
@@ -28,7 +28,8 @@
 ; 2.9s
 ; url = https://github.com/mdeket/spring-cloud-movie-recommendation
 ; 2.35s
-; url = https://github.com/yidongnan/spring-cloud-netflix-example
+; pb avec eureka detection : trop ...
+url = https://github.com/yidongnan/spring-cloud-netflix-example
 ; 92s
 ; url = https://github.com/fernandoabcampos/spring-netflix-oss-microservices
 ; pb with dockercompose file
@@ -68,7 +69,7 @@
 ;     assert microservices != microservices1, "Egalité - 1"
 ;            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 ; AssertionError: Egalité - 1
-url = https://github.com/IBM/Java-MicroProfile-on-Kubernetes.git
+; url = https://github.com/IBM/Java-MicroProfile-on-Kubernetes.git
 
 
 
