--- a/config/config.ini
+++ b/config/config.ini
@@ -9,7 +9,7 @@
 ; 2.69
 ; url = https://github.com/apssouza22/java-microservice
 ; 1.95
-; url = https://github.com/ewolff/microservice
+url = https://github.com/ewolff/microservice
 
 ; pb avec port ...
 ; 88s
@@ -29,7 +29,7 @@
 ; url = https://github.com/mdeket/spring-cloud-movie-recommendation
 ; 2.35s
 ; pb avec eureka detection : trop ...
-url = https://github.com/yidongnan/spring-cloud-netflix-example
+; url = https://github.com/yidongnan/spring-cloud-netflix-example
 ; 92s
 ; url = https://github.com/fernandoabcampos/spring-netflix-oss-microservices
 ; pb with dockercompose file
