fix: pb with tagged_value for port

--- a/config/config.ini
+++ b/config/config.ini
@@ -9,11 +9,11 @@
 ; 2.69
 ; url = https://github.com/apssouza22/java-microservice
 ; 1.95
-url = https://github.com/ewolff/microservice
+; url = https://github.com/ewolff/microservice
 
 ; pb avec port ...
 ; 88s
-; url = https://github.com/ewolff/microservice-kafka
+url = https://github.com/ewolff/microservice-kafka
 ; 7.5s
 ; url = https://github.com/anilallewar/microservices-basics-spring-boot
 ; 40.25s
@@ -41,7 +41,12 @@ url = https://github.com/ewolff/microservice
 ; 1.64s
 ; url = https://github.com/jferrater/tap-and-eat-microservices
 
-; ##########################
+
+
+
+
+
+; ############################################################################################################################################################
 ; Others : 
 ; A microservices demo implemented with Spring Cloud Netflix and Vaadin.
 ; url = https://github.com/alejandro-du/vaadin-microservices-demo.git
@@ -65,13 +70,35 @@ url = https://github.com/ewolff/microservice
 ; url = https://github.com/advantageous/qbit.git
 
 ;Deploy MicroProfile based Java microservices on Kubernetes.
+; archi disponible
 ;   File "/Users/Joseph/Desktop/Etude/CYBERSECURITÉ/A4/Stage-IRISA/code2DFD/core/dfd_extraction.py", line 90, in DFD_extraction
 ;     assert microservices != microservices1, "Egalité - 1"
 ;            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 ; AssertionError: Egalité - 1
 ; url = https://github.com/IBM/Java-MicroProfile-on-Kubernetes.git
 
+; Microservices with Kafka and Saga pattern using Spring boot
+; schéma architecture
+; url  = https://github.com/sylleryum/kafka-microservices-with-saga.git
 
+; istio
+; url = https://github.com/saturnism/istio-by-example-java.git
+
+; Youtube Java SpringCloud Mikroservis Egitimi Serisi Projesi
+; architecture
+; TODO:
+; url = https://github.com/HaydiKodlayalim/microservice-app.git
+
+; Monitor logs, metrics, pings, and traces of your distributed (micro-) services. There are also slides walking you through the features of this repository.
+; url = https://github.com/xeraa/microservice-monitoring.git
+; To suppress this check see:
+    ; https://yaml.dev/doc/ruamel.yaml/api/#Duplicate_keys
+
+; Role Based Access Control - User Management Microservice
+; url = https://github.com/andreagiassi/microservice-rbac-user-management.git
+
+; JOYRPC est un framework de services RPC implémenté en Java. Il a été entièrement repensé sur la base de l'expérience acquise avec les frameworks de services internes et prend en charge l'asynchronisme complet, les micro-noyaux et les plug-ins.
+; url = https://github.com/jd-opensource/joyrpc.git
 
 [Technology Profiles]
 communication_techs_list = [("RabbitMQ", "rmq"), ("Kafka", "kfk"), ("RestTemplate", "rst"), ("FeignClient", "fgn"), ("Implicit Connections", "imp"), ("Database Connections", "dbc"), ("HTML", "html"), ("Docker-Compose", "dcm")]
