fix bugs and begin to fix properties lacks

--- a/config/config.ini
+++ b/config/config.ini
@@ -3,7 +3,7 @@
 ; url = https://github.com/georgwittberger/apache-spring-boot-microservice-example
 ; revoir : rabbitmq non relié ...
 ; 4.21
-url = https://github.com/callistaenterprise/blog-microservices
+; url = https://github.com/callistaenterprise/blog-microservices
 ; 1.59
 ; url = https://github.com/blaugmail/clone-sample-spring-oauth2-microservices
 ; 2.69
@@ -11,7 +11,6 @@ url = https://github.com/callistaenterprise/blog-microservices
 ; 1.95
 ; url = https://github.com/ewolff/microservice
 
-; pb avec port ...
 ; 88s
 ; url = https://github.com/ewolff/microservice-kafka
 ; 7.5s
@@ -19,6 +18,7 @@ url = https://github.com/callistaenterprise/blog-microservices
 ; 40.25s
 ; url = https://github.com/mudigal-technologies/microservices-sample
 ; 19.19s
+; no DFD image ...
 ; url = https://github.com/sqshq/piggymetrics
 ; revoir
 ; 7.18s
@@ -28,7 +28,6 @@ url = https://github.com/callistaenterprise/blog-microservices
 ; 2.9s
 ; url = https://github.com/mdeket/spring-cloud-movie-recommendation
 ; 2.35s
-; pb avec eureka detection : trop ...
 ; url = https://github.com/yidongnan/spring-cloud-netflix-example
 ; 92s
 ; url = https://github.com/fernandoabcampos/spring-netflix-oss-microservices
@@ -47,27 +46,53 @@ url = https://github.com/callistaenterprise/blog-microservices
 
 
 ; ############################################################################################################################################################
-; Others : 
-; A microservices demo implemented with Spring Cloud Netflix and Vaadin.
-; url = https://github.com/alejandro-du/vaadin-microservices-demo.git
+; Others :
+
+; url = https://github.com/saturnism/istio-by-example-java.git
+; kko
+
+; JOYRPC est un framework de services RPC implémenté en Java. Il a été entièrement repensé sur la base de l'expérience acquise avec les frameworks de services internes et prend en charge l'asynchronisme complet, les micro-noyaux et les plug-ins.
+; framework -> pas de lien / shema archi
+; url = https://github.com/jd-opensource/joyrpc.git
+
+
+; Microservices with Kafka and Saga pattern using Spring boot
+; schéma architecture
+; url  = https://github.com/sylleryum/kafka-microservices-with-saga.git
+
+; Youtube Java SpringCloud Mikroservis Egitimi Serisi Projesi
+; architecture
+; TODO:
+; url = https://github.com/HaydiKodlayalim/microservice-app.git
+
+; Role Based Access Control - User Management Microservice
+; url = https://github.com/andreagiassi/microservice-rbac-user-management.git
+; 1 service et une bdd ?
 
 ; Microservice Architecture with Multiple Languages
 ; url = https://github.com/rodrigorodrigues/microservices-design-patterns.git
+; OKK
 
-; url = https://github.com/saturnism/istio-by-example-java.git
-
-; OpenShift S2I Builder for Java
-; url = https://github.com/jorgemoralespou/s2i-java.git
-
-; Ecommerce Microservices Architecture : A complete ecommerce demo Implement based on Microservice Architecture Pattern using Spring Boot, Spring Cloud, Spring WebFlux, Postgresdb and Docker.
-; url = https://github.com/mostafacs/ecommerce-microservices-spring-reactive-webflux.git
+; A microservices demo implemented with Spring Cloud Netflix and Vaadin.
+; url = https://github.com/alejandro-du/vaadin-microservices-demo.git
+; OK
 
 ; Develop a well-architected and well-documented REST API, built on a tightly integrated collection of Java EE-based microservices.
 ; archi disponible 
 ; url = https://github.com/garystafford/virtual-vehicles-demo.git
+; pas de lien ? intéressant à voir
+
+; OpenShift S2I Builder for Java
+; url = https://github.com/jorgemoralespou/s2i-java.git
+; 1services?
+
+; Ecommerce Microservices Architecture : A complete ecommerce demo Implement based on Microservice Architecture Pattern using Spring Boot, Spring Cloud, Spring WebFlux, Postgresdb and Docker.
+; url = https://github.com/mostafacs/ecommerce-microservices-spring-reactive-webflux.git
+; authentication_service/server
 
 ; QBit - The Microservice Lib for Java - JSON, REST, WebSocket, Speed!
 ; url = https://github.com/advantageous/qbit.git
+; KO
 
 ;Deploy MicroProfile based Java microservices on Kubernetes.
 ; archi disponible
@@ -76,29 +101,39 @@ url = https://github.com/callistaenterprise/blog-microservices
 ;            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 ; AssertionError: Egalité - 1
 ; url = https://github.com/IBM/Java-MicroProfile-on-Kubernetes.git
-
-; Microservices with Kafka and Saga pattern using Spring boot
-; schéma architecture
-; url  = https://github.com/sylleryum/kafka-microservices-with-saga.git
+; KO
 
 ; istio
 ; url = https://github.com/saturnism/istio-by-example-java.git
-
-; Youtube Java SpringCloud Mikroservis Egitimi Serisi Projesi
-; architecture
-; TODO:
-; url = https://github.com/HaydiKodlayalim/microservice-app.git
+; voir les liens entre services
 
 ; Monitor logs, metrics, pings, and traces of your distributed (micro-) services. There are also slides walking you through the features of this repository.
 ; url = https://github.com/xeraa/microservice-monitoring.git
-; To suppress this check see:
-    ; https://yaml.dev/doc/ruamel.yaml/api/#Duplicate_keys
+; voir les liens
 
-; Role Based Access Control - User Management Microservice
-; url = https://github.com/andreagiassi/microservice-rbac-user-management.git
+; TeaStore : Selena -> thèse
+; url = https://github.com/DescartesResearch/TeaStore.git
 
-; JOYRPC est un framework de services RPC implémenté en Java. Il a été entièrement repensé sur la base de l'expérience acquise avec les frameworks de services internes et prend en charge l'asynchronisme complet, les micro-noyaux et les plug-ins.
-; url = https://github.com/jd-opensource/joyrpc.git
+; ok
+; url = https://github.com/WendellAdriel/spring-microservices
+; koo
+; url = https://github.com/andreschaffer/microservices-testing-examples.git
+; ko
+; url = https://github.com/kumuluz/kumuluzee.git
+; ?ok
+; url = https://github.com/redhat-helloworld-msa/hola.git
+; ko
+; url = https://github.com/CJSCommonPlatform/microservice_framework_version_6.git
+; ?ok
+; url = https://github.com/artembilan/microservices-patterns-spring-integration.git
+; ok ?
+url = https://github.com/eazybytes/event-driven-microservices.git
+; ok ?
+; url = https://github.com/TristanPerry/java8-spring-cloud-microservice-demo.git
+; koo bof
+; url = https://github.com/fuinorg/ddd-cqrs-4-java-example.git
+
+
 
 [Technology Profiles]
 communication_techs_list = [("RabbitMQ", "rmq"), ("Kafka", "kfk"), ("RestTemplate", "rst"), ("FeignClient", "fgn"), ("Implicit Connections", "imp"), ("Database Connections", "dbc"), ("HTML", "html"), ("Docker-Compose", "dcm")]
