fix: +/- flow detection

--- a/config/config.ini
+++ b/config/config.ini
@@ -133,7 +133,7 @@ url = https://github.com/IBM/Java-MicroProfile-on-Kubernetes.git
 
 
 [Technology Profiles]
-communication_techs_list = [("RabbitMQ", "rmq"), ("Kafka", "kfk"), ("RestTemplate", "rst"), ("FeignClient", "fgn"), ("Implicit Connections", "imp"), ("Database Connections", "dbc"), ("HTML", "html"), ("Docker-Compose", "dcm")]
+communication_techs_list = [("RabbitMQ", "rmq"), ("Kafka", "kfk"), ("RestTemplate", "rst"), ("FeignClient", "fgn"), ("Implicit Connections", "imp"), ("Database Connections", "dbc"), ("HTML", "html"), ("Docker-Compose", "dcm"),("Kubernetes","k8s")]
 
 [Analysis Settings]
 development_mode = False
