fix: bugs with logging_entry, mvn_entry, ...

--- a/config/config.ini
+++ b/config/config.ini
@@ -1,6 +1,6 @@
 [Repository]
 ; 1.25
-; url = https://github.com/georgwittberger/apache-spring-boot-microservice-example
+url = https://github.com/georgwittberger/apache-spring-boot-microservice-example
 ; revoir : rabbitmq non relié ...
 ; 4.21
 ; url = https://github.com/callistaenterprise/blog-microservices
@@ -92,7 +92,7 @@
 ;Deploy MicroProfile based Java microservices on Kubernetes.
 ; archi disponible
 ; kubernetes
-url = https://github.com/IBM/Java-MicroProfile-on-Kubernetes.git
+; url = https://github.com/IBM/Java-MicroProfile-on-Kubernetes.git
 ; KO
 
 ; istio
