--- a/config/config_v2.ini
+++ b/config/config_v2.ini
@@ -2,7 +2,7 @@
 ; Analysable
 ; SPRING BOOT
 ; ok
-; url = https://github.com/WendellAdriel/spring-microservices
+url = https://github.com/WendellAdriel/spring-microservices
 ; url = https://github.com/527515025/springBoot.git
 ; KKKKO
 ; url = https://github.com/ityouknow/awesome-spring-boot.git
@@ -20,66 +20,41 @@
 ; url = https://github.com/sqshq/piggymetrics.git
 ; bof pas du tout complet ...
 ; url = https://github.com/Netflix/conductor.git
-; error in split ...
-;   File "/Users/Joseph/Desktop/Etude/CYBERSECURITÉ/A4/Stage-IRISA/code2DFD/technology_specific_extractors/spring_oauth/soa_entry.py", line 187, in extract_endpoint_part
-;     endpoint_part = line.split("value")[1].split(",")[0].split('\"')[1]
-;                     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^
-; IndexError: list index out of range
 ; url = https://github.com/thingsboard/thingsboard.git
-; pas de lien
-; url = https://github.com/shuzheng/zheng.git
-; etrange, pas de lien ...
-; url = https://github.com/grpc/grpc-java.git
-; probably a framework
-; url = https://github.com/Activiti/Activiti.git
-; probably a framework
-; url = https://github.com/karatelabs/karate.git
 
-; File "/Users/Joseph/Desktop/Etude/CYBERSECURITÉ/A4/Stage-IRISA/code2DFD/technology_specific_extractors/maven/mvn_entry.py", line 130, in extract_modules
-;     tree = etree.parse(pom_path)
-;   File "src/lxml/etree.pyx", line 3589, in lxml.etree.parse
-;   File "src/lxml/parser.pxi", line 1958, in lxml.etree._parseDocument
-;   File "src/lxml/parser.pxi", line 1984, in lxml.etree._parseDocumentFromURL
-;   File "src/lxml/parser.pxi", line 1887, in lxml.etree._parseDocFromFile
-;   File "src/lxml/parser.pxi", line 1200, in lxml.etree._BaseParser._parseDocFromFile
-;   File "src/lxml/parser.pxi", line 633, in lxml.etree._ParserContext._handleParseResultDoc
-;   File "src/lxml/parser.pxi", line 743, in lxml.etree._handleParseResult
-;   File "src/lxml/parser.pxi", line 672, in lxml.etree._raiseParseError
-;   File "/Users/Joseph/Desktop/Etude/CYBERSECURITÉ/A4/Stage-IRISA/code2DFD/analysed_repositories/camel/archetypes/camel-archetype-component/src/main/resources/archetype-resources/pom.xml", line 2
-; lxml.etree.XMLSyntaxError: Start tag expected, '<' not found, line 2, column 1
+; probably a framework -> énorme
 ; url = https://github.com/apache/camel.git
 
-; A TESTER :
-; https://github.com/sqshq/piggymetrics.git
-url= https://github.com/microservices-patterns/ftgo-application.git
-; https://github.com/zlt2000/microservices-platform.git
-; https://github.com/shuzheng/zheng.git
-; https://github.com/thingsboard/thingsboard.git
-; https://github.com/tobilg/ms-seed.git
-; https://github.com/piggymetrics/piggymetrics.git
-; https://github.com/callistaenterprise/blog-microservices.git
-; https://github.com/eugenp/tutorials.git
-; https://github.com/kgrzybek/modular-monolith-with-ddd.git
-; https://github.com/sneakylock/spring-boot-microservices.git
-; https://github.com/bkimminich/juice-shop.git
-; https://github.com/CristianCernat/spring-microservices.git
-; https://github.com/spring-petclinic/spring-petclinic-microservices.git
-; https://github.com/ivangfr/springboot-microservices-series.git
-; https://github.com/ivangfr/grocery-store-microservices.git
-; https://github.com/piomin/sample-spring-microservices-new.git
-; https://github.com/piomin/sample-spring-microservices.git
-; https://github.com/piomin/sample-spring-cloud-microservices.git
-; https://github.com/aksadvanced/spring-microservices.git
-; https://github.com/koushikkothagal/spring-boot-microservices.git
-; https://github.com/amitph/springboot-microservices-sample.git
-; https://github.com/Saikiransky/spring-microservices.git
-; https://github.com/yanaga/spring-boot-microservices-example.git
-; https://github.com/spring-cloud-samples/cloudfoundry-microservices.git
-; https://github.com/mastercloudapps-msc/2022-Microservices.git
-; https://github.com/devmentors/Pacco.git
-; https://github.com/devmentors/Collectively.git
-; https://github.com/devmentors/OpenTrace.git
-; https://github.com/devmentors/DistributedEshop.git
+
+; TESTER :
+; url = https://github.com/microservices-patterns/ftgo-application.git
+; url = https://github.com/zlt2000/microservices-platform.git
+; url = https://github.com/spring-petclinic/spring-petclinic-microservices.git
+; url = https://github.com/callistaenterprise/blog-microservices.git
+; url = https://github.com/sivaprasadreddy/spring-boot-microservices-series.git
+; url = https://github.com/piomin/sample-spring-microservices-new.git
+; url = https://github.com/piomin/sample-spring-microservices.git
+; url = https://github.com/piomin/sample-spring-cloud-microservices-future.git
+; url = https://github.com/aksadvanced/spring-microservices.git
+; url = https://github.com/koushikkothagal/spring-boot-microservices.git
+; url = https://github.com/pravsingh/springboot-dockerized.git
+; url = https://github.com/SayedBaladoh/Microservices-Sample-using-SpringBoot-SpringCloud-Eureka-and-Zuul.git
+; url = https://github.com/Saikiransky/spring-microservices.git
+; url = https://github.com/kartik1502/Spring-Boot-Microservices-Banking-Application.git
+; url = https://github.com/CristianCernat/spring-microservices.git
+; url = https://github.com/sneakylock/spring-boot-microservices.git
+; url = https://github.com/subhashlamba/spring-boot-microservice-example.git
+; url = https://github.com/subhashlamba/spring-boot-microservice-example.git
+; url = https://github.com/BarathArivazhagan/spring-cloud-gateway-routing.git
+; url = https://github.com/amran-bd/Oauth2Secure-microservices-architecture-apiGateway-springCloud-netflixOSS-PostgreSQL-full-demo.git
+; url = https://github.com/Mohamed-Hamdy/microservices-ecommerce-system.git
+; url = https://github.com/sqshq/piggymetrics.git
+; url = https://github.com/thingsboard/thingsboard.git
+; url = https://github.com/piggymetrics/piggymetrics.git
+; url = https://github.com/phunsukbatista/Java-Grocery-Store-Management-Springboot-Microservices-Solution.git
+; url = https://github.com/phunsukbatista/Yaksha-VM-Java-Grocery-Store-Management-Springboot-Microservices-Template.git
+; url = https://github.com/aksadvanced/spring-microservices.git
+; url = https://github.com/koushikkothagal/spring-boot-microservices.git
 
 
 
